# aemeath_withclaude

./: .gitignore  CLAUDE.md  README.md  setup-linux.sh  setup-macos.sh
.claude/: settings.json
docs/: hooks.linux.json
src/: app.js  bubble.js  pet.css  validation.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: http.rs  main.rs  state.rs
