[package]
name = "aemeath-claude"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
window-vibrancy = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["alloc"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
